--- a/app/src/main/res/layout/fragment_single_event_element.xml
+++ b/app/src/main/res/layout/fragment_single_event_element.xml
@@ -2,6 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="120dp"
+    android:layout_marginBottom="10dp"
     android:background="@color/colorPrimary"
     tools:context=".SingleEventElement"
     android:orientation="horizontal">
@@ -28,11 +29,14 @@
 
 
     <ImageView
+        android:id="@+id/event_icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/food_event_icon"
         android:layout_marginLeft="15dp"
-        android:layout_gravity="center_vertical" />
+        android:layout_gravity="center_vertical"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -47,14 +51,14 @@
             android:layout_height="wrap_content"
             android:textColor="@color/backgroundLight"
             android:text="Eat out"
-            android:textSize="22dp" />
+            android:textSize="22sp" />
         <TextView
             android:id="@+id/duration_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="@color/backgroundLight"
             android:text="1a - 2a"
-            android:textSize="20dp"
+            android:textSize="20sp"
             android:textStyle="bold"/>
         <TextView
             android:id="@+id/desciption_text"
@@ -66,7 +70,7 @@
             android:ellipsize="end"
             android:maxLines="4"
             android:singleLine="false"
-            android:textSize="18dp" />
+            android:textSize="18sp" />
     </LinearLayout>
 
 
