implemented wifi toggle

--- a/app/src/main/res/layout/activity_functionality_view.xml
+++ b/app/src/main/res/layout/activity_functionality_view.xml
@@ -31,4 +31,12 @@
         android:id="@+id/brightness"
         android:layout_centerVertical="true"
         android:layout_alignParentStart="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Wifi "
+        android:id="@+id/wifi"
+        android:layout_below="@+id/brightness"
+        android:layout_alignParentStart="true" />
 </RelativeLayout>
