implement rotation lock

--- a/app/src/main/res/layout/activity_functionality_view.xml
+++ b/app/src/main/res/layout/activity_functionality_view.xml
@@ -39,4 +39,12 @@
         android:id="@+id/wifi"
         android:layout_below="@+id/brightness"
         android:layout_alignParentStart="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Toggle Rotation"
+        android:id="@+id/rotate"
+        android:layout_above="@+id/brightness"
+        android:layout_alignParentStart="true" />
 </RelativeLayout>
