--- a/app/src/main/res/layout/activity_functionality_view.xml
+++ b/app/src/main/res/layout/activity_functionality_view.xml
@@ -12,7 +12,6 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Functionality"
         android:id="@+id/textView2" />
 
     <Button
@@ -20,16 +19,15 @@
         android:layout_height="wrap_content"
         android:text="Phone Silent"
         android:id="@+id/silent"
-        android:layout_below="@+id/textView2"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="67dp" />
+        android:layout_alignTop="@+id/textView2"
+        android:layout_alignParentStart="true" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Brightness"
         android:id="@+id/brightness"
-        android:layout_centerVertical="true"
+        android:layout_below="@+id/rotate"
         android:layout_alignParentStart="true" />
 
     <Button
@@ -45,6 +43,14 @@
         android:layout_height="wrap_content"
         android:text="Toggle Rotation"
         android:id="@+id/rotate"
-        android:layout_above="@+id/brightness"
+        android:layout_below="@+id/silent"
+        android:layout_alignParentStart="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Send Message"
+        android:id="@+id/message"
+        android:layout_below="@+id/wifi"
         android:layout_alignParentStart="true" />
 </RelativeLayout>
