--- a/app/src/main/res/layout/activity_time_view.xml
+++ b/app/src/main/res/layout/activity_time_view.xml
@@ -10,15 +10,10 @@
     android:background="@color/backgroundLight"
     tools:context="com.example.yi.smartschedule.TimeViewActivity">
 
-    <ScrollView
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/main_event_list"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:id="@+id/event_list">
-        </LinearLayout>
-    </ScrollView>
+        android:layout_height="match_parent" />
 
 </RelativeLayout>
