--- a/app/src/main/res/layout/activity_time_view.xml
+++ b/app/src/main/res/layout/activity_time_view.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,12 +8,17 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:background="@color/backgroundLight"
+    android:orientation="horizontal"
     tools:context="com.example.yi.smartschedule.TimeViewActivity">
 
 
     <android.support.v7.widget.RecyclerView
+        android:id="@+id/time_line_list"
+        android:layout_width="45dp"
+        android:layout_height="match_parent" />
+    <android.support.v7.widget.RecyclerView
         android:id="@+id/main_event_list"
-        android:layout_width="match_parent"
+        android:layout_width="fill_parent"
         android:layout_height="match_parent" />
 
-</RelativeLayout>
+</LinearLayout>
