--- a/app/src/main/res/layout/single_hour_element.xml
+++ b/app/src/main/res/layout/single_hour_element.xml
@@ -2,22 +2,27 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="35dp"
-    android:layout_height="wrap_content">
-
-    <TextView
-        android:id="@+id/hour_text"
+    android:layout_height="70dp">
+    
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="30sp"
-        android:textColor="@color/colorPrimaryDark"
-        android:text="8"
-        android:textStyle="bold"
-        android:gravity="center_horizontal" />
+        android:layout_height="30dp">
+        <TextView
+            android:id="@+id/hour_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="25sp"
+            android:textColor="@color/colorPrimaryDark"
+            android:text="8"
+            android:textStyle="bold"
+            android:gravity="center_horizontal|center_vertical"
+            android:layout_gravity="center_vertical" />
+    </LinearLayout>
 
     <LinearLayout
         android:id="@+id/hour_view"
         android:layout_width="wrap_content"
-        android:layout_height="30dp"
+        android:layout_height="fill_parent"
         android:orientation="vertical"
         android:layout_gravity="center_horizontal">
         <ImageView
