--- a/app/src/main/res/layout/activity_time_view.xml
+++ b/app/src/main/res/layout/activity_time_view.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingLeft="10dp"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:background="@color/backgroundLight"
     android:orientation="horizontal"
-    tools:context="com.example.yi.smartschedule.TimeViewActivity">
+    tools:context=".activities.TimeViewActivity">
 
 
     <aligningrecyclerview.AligningRecyclerView
@@ -21,4 +21,4 @@
         android:layout_width="fill_parent"
         android:layout_height="match_parent" />
 
-</LinearLayout>
+</RelativeLayout>
