--- a/app/src/main/res/layout/activity_functionality_view.xml
+++ b/app/src/main/res/layout/activity_functionality_view.xml
@@ -53,4 +53,12 @@
         android:id="@+id/message"
         android:layout_below="@+id/wifi"
         android:layout_alignParentStart="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Toggle Bluetooth"
+        android:id="@+id/bluetooth"
+        android:layout_below="@+id/message"
+        android:layout_alignParentStart="true" />
 </RelativeLayout>
