--- a/app/src/main/res/layout/activity_start_view.xml
+++ b/app/src/main/res/layout/activity_start_view.xml
@@ -12,7 +12,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Jack is stupid!"
+        android:text="Jack is Smart!"
         android:id="@+id/textView" />
 
     <Button
