--- a/app/src/main/res/layout/activity_main_view.xml
+++ b/app/src/main/res/layout/activity_main_view.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/backgroundLight"
+    android:windowSoftInputMode="adjustPan"
     android:orientation="vertical"
     tools:context=".activities.MainViewActivity">
 
