--- a/app/src/main/res/layout/hm_button.xml
+++ b/app/src/main/res/layout/hm_button.xml
@@ -1,39 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="50dp"
-    android:layout_height="wrap_content">
+<RelativeLayout
+    android:orientation="vertical"
+    android:layout_width="50dp"
+    android:layout_height="wrap_content"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
+        android:layout_width="20dp"
+        android:layout_height="9dp"
+        android:layout_alignParentTop="true"
+        android:id="@+id/top_arrow"
         android:src="@drawable/arrow_down_icon"
         android:scaleY="-1"
+        android:layout_centerHorizontal="true"
         android:tint="@color/colorPrimary"/>
+
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="25dp">
+        android:id="@+id/time_container"
+        android:layout_width="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_height="26dp"
+        android:layout_below="@id/top_arrow"
+        android:layout_marginTop="-3dp"
+        android:layout_centerHorizontal="true"
+        android:orientation="horizontal">
         <TextView
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="fill_parent"
             android:text="10"
-            android:gravity="top"
+            android:gravity="center_vertical"
             android:textStyle="bold"
             android:textColor="@color/colorPrimaryDark"
-            android:textSize="22sp"/>
+            android:textSize="22dp"/>
         <TextView
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:text="30"
-            android:gravity="top"
+            android:layout_gravity="center_vertical"
             android:textStyle="bold"
             android:textColor="@color/colorPrimaryDark"
             android:textSize="12sp"/>
     </LinearLayout>
-
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
+        android:layout_width="20dp"
+        android:layout_height="9dp"
+        android:layout_below="@+id/time_container"
         android:src="@drawable/arrow_down_icon"
+        android:layout_centerHorizontal="true"
         android:tint="@color/colorPrimary"/>
-</LinearLayout>
+</RelativeLayout>
