--- a/app/src/main/res/layout/fragment_detail_view.xml
+++ b/app/src/main/res/layout/fragment_detail_view.xml
@@ -34,7 +34,7 @@
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/time_picker_list"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="182dp"
                 android:layout_gravity="center_horizontal">
             </android.support.v7.widget.RecyclerView>
