--- a/app/src/main/res/layout/fragment_detail_view.xml
+++ b/app/src/main/res/layout/fragment_detail_view.xml
@@ -5,6 +5,7 @@
     android:orientation="horizontal"
     android:paddingTop="10dp"
     android:paddingBottom="10dp"
+    android:clickable="true"
     android:background="@color/backgroundLight"
     tools:context=".activities.DetailView.DetailViewFragment">
 
@@ -12,41 +13,14 @@
         android:layout_width="50dp"
         android:layout_height="match_parent">
 
+        <FrameLayout
+            android:id="@+id/top_picker_container"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
         <include
             layout="@layout/hm_button"
             android:visibility="gone"/>
-
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="50dp"
-            android:layout_height="wrap_content"
-            xmlns:android="http://schemas.android.com/apk/res/android">
-
-            <ImageView
-                android:layout_width="20dp"
-                android:layout_height="9dp"
-                android:layout_alignParentTop="true"
-                android:id="@+id/top_arrow"
-                android:src="@drawable/arrow_down_icon"
-                android:scaleY="-1"
-                android:layout_gravity="center_horizontal"
-                android:tint="@color/colorPrimary"/>
-
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/time_picker_list"
-                android:layout_width="match_parent"
-                android:layout_height="182dp"
-                android:layout_gravity="center_horizontal">
-            </android.support.v7.widget.RecyclerView>
-
-            <ImageView
-                android:layout_width="20dp"
-                android:layout_height="9dp"
-                android:layout_gravity="center_horizontal"
-                android:src="@drawable/arrow_down_icon"
-                android:layout_centerHorizontal="true"
-                android:tint="@color/colorPrimary"/>
-        </LinearLayout>
 
 
         <include
