--- a/app/src/main/res/layout/fragment_time_picker.xml
+++ b/app/src/main/res/layout/fragment_time_picker.xml
@@ -1,30 +1,93 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    android:orientation="vertical"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="50dp"
-    android:layout_height="wrap_content"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    android:layout_height="200dp">
 
-    <ImageView
-        android:layout_width="20dp"
-        android:layout_height="9dp"
-        android:layout_alignParentTop="true"
-        android:id="@+id/top_arrow"
-        android:src="@drawable/arrow_down_icon"
-        android:scaleY="-1"
-        android:layout_gravity="center_horizontal"
-        android:tint="@color/colorPrimary"/>
+    <LinearLayout
+        android:id="@+id/picker_layout"
+        android:layout_width="50dp"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:visibility="gone">
 
-    <android.support.v7.widget.RecyclerView
-        android:layout_width="wrap_content"
-        android:layout_height="100dp"
-        android:layout_gravity="center_horizontal">
-    </android.support.v7.widget.RecyclerView>
-    <ImageView
-        android:layout_width="20dp"
-        android:layout_height="9dp"
-        android:layout_gravity="center_horizontal"
-        android:src="@drawable/arrow_down_icon"
-        android:layout_centerHorizontal="true"
-        android:tint="@color/colorPrimary"/>
-</LinearLayout>
+        <ImageView
+            android:layout_width="20dp"
+            android:layout_height="9dp"
+            android:layout_alignParentTop="true"
+            android:layout_gravity="center_horizontal"
+            android:scaleY="-1"
+            android:src="@drawable/arrow_down_icon"
+            android:tint="@color/colorPrimary" />
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/time_picker_list"
+            android:layout_width="wrap_content"
+            android:layout_height="182dp"
+            android:layout_gravity="center_horizontal" />
+
+        <ImageView
+            android:layout_width="20dp"
+            android:layout_height="9dp"
+            android:layout_centerHorizontal="true"
+            android:layout_gravity="center_horizontal"
+            android:src="@drawable/arrow_down_icon"
+            android:tint="@color/colorPrimary" />
+    </LinearLayout>
+
+    <RelativeLayout
+        android:id="@+id/picker_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <ImageView
+            android:id="@+id/top_arrow"
+            android:layout_width="20dp"
+            android:layout_height="9dp"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:scaleY="-1"
+            android:src="@drawable/arrow_down_icon"
+            android:tint="@color/colorPrimary" />
+
+        <LinearLayout
+            android:id="@+id/time_container"
+            android:layout_width="wrap_content"
+            android:layout_height="26dp"
+            android:layout_below="@id/top_arrow"
+            android:layout_centerHorizontal="true"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="-3dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/hour_text"
+                android:layout_width="wrap_content"
+                android:layout_height="fill_parent"
+                android:gravity="center_vertical"
+                android:text="10"
+                android:textColor="@color/colorPrimaryDark"
+                android:textSize="22dp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/minute_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:text="30"
+                android:textColor="@color/colorPrimaryDark"
+                android:textSize="12sp"
+                android:textStyle="bold" />
+        </LinearLayout>
+
+        <ImageView
+            android:id="@+id/bottom_arrow"
+            android:layout_width="20dp"
+            android:layout_height="9dp"
+            android:layout_centerHorizontal="true"
+            android:layout_below="@+id/time_container"
+            android:src="@drawable/arrow_down_icon"
+            android:tint="@color/colorPrimary" />
+    </RelativeLayout>
+
+</RelativeLayout>
