--- a/app/src/main/res/layout/fragment_detail_view.xml
+++ b/app/src/main/res/layout/fragment_detail_view.xml
@@ -10,7 +10,7 @@
     tools:context=".activities.DetailView.DetailViewFragment">
 
     <RelativeLayout
-        android:layout_width="50dp"
+        android:layout_width="60dp"
         android:layout_height="match_parent">
 
         <FrameLayout
@@ -18,17 +18,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
-        <include
-            layout="@layout/hm_button"
-            android:visibility="gone"/>
-
-
-        <include
-            layout="@layout/hm_button"
+        <FrameLayout
+            android:id="@+id/bottom_picker_container"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
             android:layout_alignParentBottom="true"/>
+
     </RelativeLayout>
 
     <LinearLayout
@@ -38,27 +33,6 @@
         android:layout_marginBottom="23dp"
         android:layout_marginRight="25dp"
         android:background="@color/colorPrimary">
-        <RelativeLayout
-            android:layout_width="10dp"
-            android:layout_height="match_parent">
-            <View
-                android:layout_width="10dp"
-                android:layout_height="wrap_content"
-                android:background="@color/backgroundLight"/>
-            <ImageView
-                android:layout_width="10dp"
-                android:layout_height="10dp"
-                android:src="@drawable/event_triangle"
-                android:tint="@color/colorPrimary"
-                android:layout_alignParentTop="true"/>
-            <ImageView
-                android:layout_width="10dp"
-                android:layout_height="10dp"
-                android:src="@drawable/event_triangle"
-                android:tint="@color/colorPrimary"
-                android:scaleY="-1"
-                android:layout_alignParentBottom="true"/>
-        </RelativeLayout>
         <FrameLayout
             android:layout_width="90dp"
             android:layout_height="match_parent"></FrameLayout>
