--- a/app/src/main/res/layout/fragment_time_picker.xml
+++ b/app/src/main/res/layout/fragment_time_picker.xml
@@ -1,93 +1,134 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="50dp"
-    android:layout_height="200dp">
-
-    <LinearLayout
-        android:id="@+id/picker_layout"
-        android:layout_width="50dp"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:visibility="gone">
-
-        <ImageView
-            android:layout_width="20dp"
-            android:layout_height="9dp"
-            android:layout_alignParentTop="true"
-            android:layout_gravity="center_horizontal"
-            android:scaleY="-1"
-            android:src="@drawable/arrow_down_icon"
-            android:tint="@color/colorPrimary" />
-
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/time_picker_list"
-            android:layout_width="wrap_content"
-            android:layout_height="182dp"
-            android:layout_gravity="center_horizontal" />
-
-        <ImageView
-            android:layout_width="20dp"
-            android:layout_height="9dp"
-            android:layout_centerHorizontal="true"
-            android:layout_gravity="center_horizontal"
-            android:src="@drawable/arrow_down_icon"
-            android:tint="@color/colorPrimary" />
-    </LinearLayout>
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="60dp"
+    android:layout_height="200dp"
+    android:orientation="horizontal">
 
     <RelativeLayout
-        android:id="@+id/picker_button"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <ImageView
-            android:id="@+id/top_arrow"
-            android:layout_width="20dp"
-            android:layout_height="9dp"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:scaleY="-1"
-            android:src="@drawable/arrow_down_icon"
-            android:tint="@color/colorPrimary" />
+        android:layout_width="50dp"
+        android:layout_height="200dp">
 
         <LinearLayout
-            android:id="@+id/time_container"
-            android:layout_width="wrap_content"
-            android:layout_height="26dp"
-            android:layout_below="@id/top_arrow"
-            android:layout_centerHorizontal="true"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="-3dp"
-            android:orientation="horizontal">
+            android:id="@+id/picker_layout"
+            android:layout_width="50dp"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:visibility="gone">
 
-            <TextView
-                android:id="@+id/hour_text"
-                android:layout_width="wrap_content"
-                android:layout_height="fill_parent"
-                android:gravity="center_vertical"
-                android:text="10"
-                android:textColor="@color/colorPrimaryDark"
-                android:textSize="22dp"
-                android:textStyle="bold" />
+            <ImageView
+                android:layout_width="20dp"
+                android:layout_height="9dp"
+                android:layout_alignParentTop="true"
+                android:layout_gravity="center_horizontal"
+                android:scaleY="-1"
+                android:src="@drawable/arrow_down_icon"
+                android:tint="@color/colorPrimary" />
 
-            <TextView
-                android:id="@+id/minute_text"
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/time_picker_list"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:text="30"
-                android:textColor="@color/colorPrimaryDark"
-                android:textSize="12sp"
-                android:textStyle="bold" />
+                android:layout_height="182dp"
+                android:layout_gravity="center_horizontal"
+                android:overScrollMode="never"/>
+
+            <ImageView
+                android:layout_width="20dp"
+                android:layout_height="9dp"
+                android:layout_centerHorizontal="true"
+                android:layout_gravity="center_horizontal"
+                android:src="@drawable/arrow_down_icon"
+                android:tint="@color/colorPrimary" />
         </LinearLayout>
 
-        <ImageView
-            android:id="@+id/bottom_arrow"
-            android:layout_width="20dp"
-            android:layout_height="9dp"
-            android:layout_centerHorizontal="true"
-            android:layout_below="@+id/time_container"
-            android:src="@drawable/arrow_down_icon"
-            android:tint="@color/colorPrimary" />
+        <RelativeLayout
+            android:id="@+id/picker_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:id="@+id/top_arrow"
+                android:layout_width="20dp"
+                android:layout_height="9dp"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true"
+                android:scaleY="-1"
+                android:src="@drawable/arrow_down_icon"
+                android:tint="@color/colorPrimary" />
+
+            <LinearLayout
+                android:id="@+id/time_container"
+                android:layout_width="wrap_content"
+                android:layout_height="26dp"
+                android:layout_below="@id/top_arrow"
+                android:layout_centerHorizontal="true"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="-3dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/hour_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="fill_parent"
+                    android:gravity="center_vertical"
+                    android:text="10"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:textSize="22dp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/minute_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:text="30"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:textSize="12sp"
+                    android:textStyle="bold" />
+            </LinearLayout>
+
+            <ImageView
+                android:id="@+id/bottom_arrow"
+                android:layout_width="20dp"
+                android:layout_height="9dp"
+                android:layout_centerHorizontal="true"
+                android:layout_below="@+id/time_container"
+                android:src="@drawable/arrow_down_icon"
+                android:tint="@color/colorPrimary" />
+        </RelativeLayout>
+
     </RelativeLayout>
 
-</RelativeLayout>
+    <RelativeLayout
+        android:layout_width="10dp"
+        android:layout_height="match_parent">
+
+        <ImageView
+            android:id="@+id/time_indicator_up"
+            android:layout_width="10dp"
+            android:layout_height="10dp"
+            android:scaleY="-1"
+            android:layout_marginTop="23dp"
+            android:layout_marginBottom="23dp"
+            android:src="@drawable/event_triangle"
+            android:tint="@color/colorPrimary"
+            android:visibility="invisible"/>
+
+        <ImageView
+            android:id="@+id/time_indicator_down"
+            android:layout_width="10dp"
+            android:layout_height="10dp"
+            android:layout_marginTop="23dp"
+            android:layout_marginBottom="23dp"
+            android:src="@drawable/event_triangle"
+            android:tint="@color/colorPrimary" />
+
+        <View
+            android:id="@+id/top_block"
+            android:layout_width="match_parent"
+            android:layout_height="23dp"
+            android:background="@color/backgroundLight"/>
+    </RelativeLayout>
+
+
+</LinearLayout>
