Implemented Preset Icon picker list

--- a/app/src/main/res/layout/fragment_time_picker.xml
+++ b/app/src/main/res/layout/fragment_time_picker.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="60dp"
     android:layout_height="200dp"
     android:orientation="horizontal">
 
     <RelativeLayout
-        android:layout_width="50dp"
+        android:layout_width="60dp"
         android:layout_height="200dp">
 
         <LinearLayout
             android:id="@+id/picker_layout"
-            android:layout_width="50dp"
+            android:layout_width="60dp"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:visibility="gone">
@@ -21,15 +21,15 @@
                 android:layout_height="9dp"
                 android:layout_alignParentTop="true"
                 android:layout_gravity="center_horizontal"
+                android:layout_marginRight="5dp"
                 android:scaleY="-1"
                 android:src="@drawable/arrow_down_icon"
                 android:tint="@color/colorPrimary" />
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/time_picker_list"
-                android:layout_width="wrap_content"
+                android:layout_width="60dp"
                 android:layout_height="182dp"
-                android:layout_gravity="center_horizontal"
                 android:overScrollMode="never"/>
 
             <ImageView
@@ -37,14 +37,16 @@
                 android:layout_height="9dp"
                 android:layout_centerHorizontal="true"
                 android:layout_gravity="center_horizontal"
+                android:layout_marginRight="5dp"
                 android:src="@drawable/arrow_down_icon"
                 android:tint="@color/colorPrimary" />
         </LinearLayout>
 
         <RelativeLayout
             android:id="@+id/picker_button"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_width="50dp"
+            android:layout_height="wrap_content"
+            android:visibility="visible">
 
             <ImageView
                 android:id="@+id/top_arrow"
@@ -101,7 +103,9 @@
 
     <RelativeLayout
         android:layout_width="10dp"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_marginLeft="50dp"
+        android:clickable="false">
 
         <ImageView
             android:id="@+id/time_indicator_up"
@@ -131,4 +135,4 @@
     </RelativeLayout>
 
 
-</LinearLayout>
+</RelativeLayout>
