--- a/app/src/main/res/layout/fragment_detail_view.xml
+++ b/app/src/main/res/layout/fragment_detail_view.xml
@@ -34,8 +34,9 @@
         android:layout_marginRight="25dp"
         android:background="@color/colorPrimary">
         <FrameLayout
+            android:id="@+id/preset_picker"
             android:layout_width="90dp"
-            android:layout_height="match_parent"></FrameLayout>
+            android:layout_height="match_parent"/>
         <ScrollView
             android:layout_width="fill_parent"
             android:layout_height="match_parent"
