--- a/app/src/main/res/layout/single_hm_element.xml
+++ b/app/src/main/res/layout/single_hm_element.xml
@@ -1,28 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="50dp"
+    android:layout_width="60dp"
     android:layout_height="26dp">
-    <LinearLayout
-        android:layout_width="wrap_content"
+
+    <RelativeLayout
+        android:layout_width="50dp"
         android:layout_height="match_parent"
-        android:layout_centerHorizontal="true">
-        <TextView
-            android:id="@+id/hour_text"
+        android:layout_alignParentStart="true">
+        <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="fill_parent"
-            android:text="10"
-            android:gravity="center_vertical"
-            android:textStyle="bold"
-            android:textColor="@color/colorPrimaryDark"
-            android:textSize="22dp"/>
-        <TextView
-            android:id="@+id/minute_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="30"
-            android:layout_gravity="center_vertical"
-            android:textStyle="bold"
-            android:textColor="@color/colorPrimaryDark"
-            android:textSize="12sp"/>
-    </LinearLayout>
+            android:layout_height="match_parent"
+            android:layout_centerHorizontal="true">
+            <TextView
+                android:id="@+id/hour_text"
+                android:layout_width="wrap_content"
+                android:layout_height="fill_parent"
+                android:text="10"
+                android:gravity="center_vertical"
+                android:textStyle="bold"
+                android:textColor="@color/colorPrimaryDark"
+                android:textSize="22dp"/>
+            <TextView
+                android:id="@+id/minute_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="30"
+                android:layout_gravity="center_vertical"
+                android:textStyle="bold"
+                android:textColor="@color/colorPrimaryDark"
+                android:textSize="12sp"/>
+        </LinearLayout>
+    </RelativeLayout>
 </RelativeLayout>
